--- a/app/src/main/res/layout/activity_event_register.xml
+++ b/app/src/main/res/layout/activity_event_register.xml
@@ -7,29 +7,32 @@
     tools:context=".EventRegisterActivity">
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="368dp"
+        android:id="@+id/btn_register"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@android:color/holo_red_dark"
         android:text="REGISTER"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="0dp"
-        android:layout_height="195dp"
+        android:layout_height="266dp"
+        android:layout_marginBottom="204dp"
         android:contentDescription="@string/app_name"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:src="@drawable/coverphoto" />
 
     <android.support.v7.widget.CardView
@@ -43,12 +46,12 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:cardBackgroundColor="#0272A6"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.789"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.525">
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:id="@+id/rl_event_info"
@@ -66,7 +69,7 @@
                 android:layout_marginStart="57dp"
                 android:layout_marginLeft="57dp"
                 android:layout_marginTop="9dp"
-                android:fontFamily="sans-serif-smallcaps"
+                android:fontFamily="@font/arvo"
                 android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 android:textColor="@android:color/white"
