--- a/app/src/main/res/layout/activity_event_register.xml
+++ b/app/src/main/res/layout/activity_event_register.xml
@@ -162,11 +162,16 @@
 
             <TextView
                 android:id="@+id/tv_event_registration_description"
-                android:layout_width="wrap_content"
+                android:layout_width="214dp"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/imageView4"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="40dp"
+                android:layout_marginStart="48dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="39dp"
                 android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 android:textColor="@android:color/white" />
