--- a/app/src/main/res/layout/activity_event_registration_form.xml
+++ b/app/src/main/res/layout/activity_event_registration_form.xml
@@ -7,7 +7,7 @@
     tools:context=".EventRegistrationForm">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_submit_reg_form"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_red_dark"
@@ -28,7 +28,7 @@
         android:layout_marginBottom="204dp"
         android:contentDescription="@string/app_name"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btn_submit_reg_form"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         app:cardBackgroundColor="#0272A6"
         app:cardCornerRadius="12dp"
         app:cardElevation="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btn_submit_reg_form"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -77,10 +77,10 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_reg_user_name"
                 android:layout_width="252dp"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/editText2"
+                android:layout_alignStart="@+id/et_reg_clg_name"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="0dp"
                 android:layout_marginTop="110dp"
@@ -91,7 +91,7 @@
                 android:padding="8dp" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/et_reg_clg_name"
                 android:layout_width="252dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
