--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,8 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#458df9</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">#458df9</item>
+        <item name="colorAccent">@android:color/holo_red_light</item>
+        <item name="android:colorBackground">@android:color/white</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
